benches/benches/criterion.out
warning: function `skip_ascii_whitespace` is never used
   --> crates/parse/src/lexer/unescape/mod.rs:339:4
    |
339 | fn skip_ascii_whitespace<F>(chars: &mut Chars<'_>, mut start: usize, callback: &mut F)
    |    ^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: `solar-parse` (lib) generated 1 warning
   Compiling solar-bench v0.1.3 (/Users/malik/Desktop/mc2/solar/benches)
error[E0464]: multiple candidates for `rlib` dependency `criterion` found
 --> benches/benches/criterion.rs:1:5
  |
1 | use criterion::{criterion_group, criterion_main, Criterion};
  |     ^^^^^^^^^
  |
  = note: candidate #1: /Users/malik/Desktop/mc2/solar/target/release/deps/libcodspeed_criterion_compat-a4b6c59ab581f04c.rlib
  = note: candidate #2: /Users/malik/Desktop/mc2/solar/target/release/deps/libcriterion-596bf6c4c3b99ce4.rlib

error[E0601]: `main` function not found in crate `criterion`
  --> benches/benches/criterion.rs:41:26
   |
41 | criterion_main!(benches);
   |                          ^ consider adding a `main` function to `benches/benches/criterion.rs`

Some errors have detailed explanations: E0464, E0601.
For more information about an error, try `rustc --explain E0464`.
error: could not compile `solar-bench` (bench "criterion") due to 2 previous errors
Error: 'cargo bench' returned an error (exit status: 101); unable to continue.
